layout versione 1.0 completo

--- a/layouts/section/about.html
+++ b/layouts/section/about.html
@@ -7,9 +7,16 @@
 <main id="site-main" class="site-main outer" role="main">
   <div class="inner">
     <div class="post-feed">
-        {{ .Content }}
     </div>
   </div>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <div>
+    {{ .Content }}
+    </div>
+
 </main>
 
 {{ partial "footer" . }}
